--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <li><span class = "list-orange">GIT</span></li>
                         <li><span class = "list-orange">JavaScript</span></li>
                         <li><span class = "list-orange">Java Core</span></li>
-                        <li><span class = "list-orange">SQL Server</span></li>
+                        <li><span class = "list-orange">SQL</span></li>
                         <li><span class = "list-orange">Oracle</span></li>
                         <li><span class = "list-orange">VSCode</span></li>
                         <li><span class = "list-orange">Jira</span></li>
