--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <h2 class="header-primary">Projects</h2>
                 <ol class="primary-list">
                     <li>
-                        <a class="list-primary-item" href="Potter-2"
+                        <a class="list-primary-item" href="https://github.com/Solar0409/Project1/tree/e49493c047d54ef1fbfe0458ab218661f6a570ab/Potter-2"
                             >Potter-2</a
                         ><span class="list-primary-item">...</span>[<span class="list-primary-item">HTML5</span>  ]
                     </li>
                     <li>
-                        <a class="list-primary-item" href="MERCEDES-BENZ_2"
+                        <a class="list-primary-item" href="https://github.com/Solar0409/Project1.git"
                             >MERCEDES-BENZ_2</a
                         ><span class="list-primary-item">.....</span>[<span class="list-primary-item"> HTML5, CSS </span> ]
                     </li>
